# rivers

./: .gitignore  README.md  environment.yml  national_map_client.py  ncei_io.py  pyproject.toml  requirements.txt  usgs_io.py
chicagoland/: nbcr_flows.ipynb  nbcr_map.ipynb
chicagoland/data/: README.md
grand_canyon/: crsp.ipynb  grand_canyon_conditions.ipynb
